--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "eslint": "^6.8.0",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.8",
+    "mocha": "^8.4.0"
   }
 }
